--- a/client/src/css/Home/Home.css
+++ b/client/src/css/Home/Home.css
@@ -1,14 +1,59 @@
 main {
   grid-area: main;
+  padding: 10px 0;
 }
 main .home {
   display: flex;
-  gap: 30px;
+  flex-direction: column;
+}
+main .search {
+  width: 70%;
+  margin: auto;
+  padding: 20px;
+  background-color: var(--bodyWhite);
+  border-radius: 40px;
+  box-shadow: var(--boxShadow);
+}
+main .search .box {
+  display: flex;
+  align-items: stretch;
+  overflow: hidden;
+  background-color: var(--bodyColor);
+  padding: 10px;
+  border-radius: 20px;
+}
+main .search .box span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-right: var(--border);
+  padding: 0 10px;
+  background-color: transparent;
+  color: var(--redColor);
+}
+main .search .box input {
+  padding: 5px;
+  border: none;
+  background-color: transparent;
+  width: 100%;
+}
+main .search .box input:focus {
+  outline: none;
+  padding-left: 7px;
+}
+main .search .box input:focus::placeholder {
+  transition: all 0.3s;
+  color: transparent;
 }
 
 @media (max-width: 767px) {
-  main .home {
-    flex-direction: column;
+  main .search {
+    width: 85%;
+    padding: 10px;
+  }
+  main .search .box {
+    padding: 5px;
   }
 }
 .product-modal .close-icon {
@@ -23,6 +68,13 @@ main .home {
   font-weight: bold;
   cursor: pointer;
 }
+.product-modal .title {
+  width: fit-content;
+  margin: 0 auto 10px;
+  border-bottom: var(--border);
+  padding: 0 10px 10px;
+  text-transform: capitalize;
+}
 .product-modal .main-content {
   display: flex;
   flex-direction: column;
@@ -34,6 +86,10 @@ main .home {
   justify-content: space-evenly;
   align-items: center;
   gap: 20px;
+  background-color: var(--bodyWhite);
+  box-shadow: var(--boxShadow);
+  padding: 10px;
+  border-radius: 20px;
 }
 .product-modal .main-content .product-info img {
   width: 200px;
@@ -45,12 +101,7 @@ main .home {
 }
 .product-modal .main-content .product-info .product-info-details {
   flex: 1;
-}
-.product-modal .main-content .product-info .product-info-details .title {
-  width: fit-content;
-  margin: 0 auto 10px;
-  border-bottom: var(--border);
-  padding: 0 10px 10px;
+  width: 100%;
 }
 .product-modal .main-content .product-info .product-info-details .desc,
 .product-modal .main-content .product-info .product-info-details .price,
@@ -60,6 +111,7 @@ main .home {
 .product-modal .main-content .product-info .product-info-details .desc > div,
 .product-modal .main-content .product-info .product-info-details .price > div,
 .product-modal .main-content .product-info .product-info-details .category > div {
+  background-color: var(--bodyColor);
   border: var(--border);
   border-radius: 10px;
   padding: 7px 10px;
@@ -75,6 +127,7 @@ main .home {
 }
 .product-modal .main-content .product-info .product-info-details .sizes span,
 .product-modal .main-content .product-info .product-info-details .colors span {
+  background-color: var(--bodyColor);
   padding: 5px 15px;
   text-transform: uppercase;
   border: var(--border);
