--- a/client/src/components/Cart/Cart.scss
+++ b/client/src/components/Cart/Cart.scss
@@ -18,6 +18,7 @@
 	.heading {
 		display: flex;
 		justify-content: space-between;
+		align-items: center;
 		padding: 10px;
 		background-color: var(--bkRed);
 		color: var(--textSecondColor);
@@ -90,12 +91,14 @@
 						height: 20px;
 						border-radius: 50%;
 						background-color: var(--mainColor);
-						text-align: center;
+						display: flex;
+						justify-content: center;
+						align-items: center;
 						color: var(--textColor);
 						cursor: pointer;
 						&:first-child {
-							background-color: var(--bkRed);
-							color: var(--textSecondColor);
+							background-color: var(--redColor);
+							color: var(--textColor);
 						}
 						&.hide {
 							visibility: hidden;
@@ -124,12 +127,14 @@
 @media (max-width: 767px) {
 	.cart {
 		.heading {
+			padding: 5px 0;
 			> div {
 				width: 25%;
 			}
 		}
 		.cart-items {
 			.cart-item {
+				padding: 10px 0;
 				.image {
 					font-size: 14px;
 					width: 25%;
@@ -142,28 +147,19 @@
 				.quantity,
 				.remove {
 					width: 25%;
+					.icon {
+						width: 30px;
+						height: 30px;
+						svg {
+							font-size: 17px;
+						}
+					}
+					.quantity-options {
+						width: 100%;
+					}
 				}
 			}
 		}
-	}
-}
-
-a.go-to-cart {
-	width: 30px;
-	height: 30px;
-	position: fixed;
-	top: 90px;
-	left: 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background: var(--bodyWhite);
-	box-shadow: var(--boxShadowStrong);
-	color: var(--redColor);
-	border-top-right-radius: 20px;
-	border-bottom-right-radius: 20px;
-	svg {
-		font-size: 20px;
 	}
 }
 
