--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -6,34 +6,20 @@ header {
 	.container {
 		display: flex;
 		justify-content: space-between;
-		align-items: stretch;
+		align-items: center;
 		height: 100%;
+
 		.logo {
 			text-transform: none;
 			color: var(--textColor);
 			text-decoration: none;
-			display: flex;
-			align-items: center;
 			font-size: 20px;
 			img {
-				width: 40px;
-				background-color: var(--bodyColor);
-				border-radius: 50%;
-				margin-left: 3px;
-			}
-			&:hover {
-				span {
-					filter: brightness(1.2);
-				}
-			}
-			span {
-				color: var(--redColor);
-				display: flex;
-				height: 100%;
-				align-items: center;
-				font-size: 50px;
+				// width: 100px;
+				// max-width: 100%;
 			}
 		}
+
 		nav {
 			display: flex;
 			// TODO: main ul
@@ -103,6 +89,7 @@ header {
 					&.drop-menu {
 						img {
 							width: 50px;
+							height: 50px;
 							cursor: pointer;
 							object-fit: contain;
 						}
