--- a/client/src/components/Products/Products.scss
+++ b/client/src/components/Products/Products.scss
@@ -1,5 +1,5 @@
 .products-wrapper {
-	margin-top: 70px;
+	margin-top: 30px;
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 	gap: 15px;
@@ -48,6 +48,10 @@
 					transition: all 0.3s;
 					&:active {
 						transform: scale(0.93);
+					}
+					&:hover {
+						background-color: var(--redColor);
+						color: var(--textColor);
 					}
 				}
 			}
