--- a/client/src/css/Header/Header.css
+++ b/client/src/css/Header/Header.css
@@ -6,32 +6,14 @@ header {
 header .container {
   display: flex;
   justify-content: space-between;
-  align-items: stretch;
+  align-items: center;
   height: 100%;
 }
 header .container .logo {
   text-transform: none;
   color: var(--textColor);
   text-decoration: none;
-  display: flex;
-  align-items: center;
   font-size: 20px;
-}
-header .container .logo img {
-  width: 40px;
-  background-color: var(--bodyColor);
-  border-radius: 50%;
-  margin-left: 3px;
-}
-header .container .logo:hover span {
-  filter: brightness(1.2);
-}
-header .container .logo span {
-  color: var(--redColor);
-  display: flex;
-  height: 100%;
-  align-items: center;
-  font-size: 50px;
 }
 header .container nav {
   display: flex;
@@ -96,6 +78,7 @@ header .container nav .main-list > li > a.signup:hover::after, header .container
 }
 header .container nav .main-list > li.drop-menu img {
   width: 50px;
+  height: 50px;
   cursor: pointer;
   object-fit: contain;
 }
