--- a/client/src/css/Products/Products.css
+++ b/client/src/css/Products/Products.css
@@ -1,5 +1,5 @@
 .products-wrapper {
-  margin-top: 70px;
+  margin-top: 30px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 15px;
@@ -50,4 +50,8 @@
 }
 .products-wrapper .product-item .product-desc p span:active {
   transform: scale(0.93);
+}
+.products-wrapper .product-item .product-desc p span:hover {
+  background-color: var(--redColor);
+  color: var(--textColor);
 }
