--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,7 @@
     --textSecondColor: #373F50;
     --bodyColor: #F6F9F9;
     --bodyWhite: #fff;
-    --border: 1px solid #c0c0c0;
+    --border: 1px solid #ddd;
     --padding: 10px;
 
 }
@@ -36,7 +36,25 @@ body {
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
-    width: 95%;
+    /* width: 95%; */
+}
+
+@media (min-width: 768px) {
+    .container {
+        width: 750px
+    }
+}
+
+@media (min-width: 992px) {
+    .container {
+        width: 970px
+    }
+}
+
+@media (min-width: 1200px) {
+    .container {
+        width: 1170px
+    }
 }
 
 .layout {
@@ -49,6 +67,10 @@ body {
     grid-template-rows: 50px 1fr 50px;
 }
 
+
+
+
+
 /* !Global Config */
 
 /* * buttons */
@@ -59,11 +81,7 @@ button {
 }
 
 button:active, svg:active, a:active {
-    transform: scale(.98);
-}
-
-button::after {
-    content: '';
+    transform: scale(0.98);
 }
 
 /* * Model Style */
@@ -93,15 +111,9 @@ button::after {
     top: 0;
     left: 0;
     background-color: rgba(61, 61, 61, 0.7);
-    z-index: 9999;
+    z-index: 111;
     transition: all 0.5s ease-in-out;
 }
-
-/* @media (max-width: 767px) {
-    .overlay-modal {
-        max-width: 390px;
-    }
-} */
 
 .ReactModal__Content--after-open {
     opacity: 1;
@@ -117,38 +129,45 @@ button::after {
 
 /* Scrollbar */
 
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
     width: 16px;
     height: 16px;
 }
 
-::-webkit-scrollbar-track {
+
+
+body::-webkit-scrollbar-track {
     background-color: var(--bodyColor);
 }
 
-::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
     background-color: var(--mainColor);
 }
 
+body::-webkit-scrollbar-thumb:hover {
+    transition: all .3s;
+    background: #0a4660d8;
+}
 
-::-webkit-scrollbar-button:single-button {
+body::-webkit-scrollbar-button:single-button {
     background-color: var(--mainColor);
     display: block;
     background-size: 10px;
     background-repeat: no-repeat;
 }
 
-::-webkit-scrollbar-button:single-button:vertical:decrement,
-::-webkit-scrollbar-button:single-button:vertical:increment {
+body::-webkit-scrollbar-button:single-button:vertical:decrement,
+body::-webkit-scrollbar-button:single-button:vertical:increment {
     height: 12px;
     width: 16px;
     background-position: center 4px;
+
 }
 
-::-webkit-scrollbar-button:single-button:vertical:decrement {
+body::-webkit-scrollbar-button:single-button:vertical:decrement {
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(96, 96, 96)'><polygon points='50,00 0,50 100,50'/></svg>");
 }
 
-::-webkit-scrollbar-button:single-button:vertical:increment {
+body::-webkit-scrollbar-button:single-button:vertical:increment {
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(96, 96, 96)'><polygon points='0,0 100,0 50,50'/></svg>");
 }
