--- a/client/src/pages/Profile/Profile.scss
+++ b/client/src/pages/Profile/Profile.scss
@@ -62,6 +62,10 @@
 				margin: 0 auto 10px;
 				// border: none;
 				opacity: 0.8;
+				&:nth-child(3) {
+					background-color: var(--redColor);
+					color: var(--textColor);
+				}
 				&:hover {
 					opacity: 1;
 				}
@@ -85,13 +89,13 @@
 		.user-info-box {
 			padding: 20px;
 			display: grid;
-			// margin-bottom: 20px;
 			grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 			gap: 20px;
 			.box {
 				box-shadow: var(--boxShadow);
 				padding: 10px;
 				border-radius: 10px;
+				background-color: var(--bodyColor);
 				h3 {
 					margin-bottom: 20px;
 				}
@@ -112,8 +116,6 @@
 
 	.change-password {
 		position: relative;
-		// box-shadow: var(--boxShadow);
-		// border-radius: 10px;
 		width: 70%;
 		@media (max-width: 767px) {
 			width: 100%;
