--- a/client/src/components/Cart/Cart.scss
+++ b/client/src/components/Cart/Cart.scss
@@ -10,7 +10,7 @@
 		padding: 10px 0;
 		span {
 			padding: 10px;
-			background: var(--bkRed);
+			background: var(--bkBlue);
 			color: var(--textSecondColor);
 		}
 	}
@@ -20,7 +20,7 @@
 		justify-content: space-between;
 		align-items: center;
 		padding: 10px;
-		background-color: var(--bkRed);
+		background-color: var(--bkBlue);
 		color: var(--textSecondColor);
 		> div {
 			width: 25%;
