--- a/client/src/components/Main/Main.scss
+++ b/client/src/components/Main/Main.scss
@@ -1,24 +1,16 @@
 .main-page {
-  position: relative;
-  .content {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 5px;
-    text-align: center;
-    a {
-        color: #333;
-    }
-    button {
-      border: none;
-      padding: 20px;
-      background-color: rgb(56, 56, 183);
-      margin-top: 20px;
-      a {
-        color: white;
-        text-decoration: none;
-      }
-    }
-  }
+	grid-area: main;
+	.container {
+		.logo {
+			margin: auto;
+			max-width: 100%;
+			width: 340px;
+			img {
+				width: 100%;
+			}
+		}
+		.heading {
+			color: var(--mainColor);
+		}
+	}
 }
