--- a/client/src/css/Cart/Cart.css
+++ b/client/src/css/Cart/Cart.css
@@ -12,7 +12,7 @@
 }
 .cart .cart-title span {
   padding: 10px;
-  background: var(--bkRed);
+  background: var(--bkBlue);
   color: var(--textSecondColor);
 }
 .cart .heading {
@@ -20,7 +20,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: var(--bkRed);
+  background-color: var(--bkBlue);
   color: var(--textSecondColor);
 }
 .cart .heading > div {
