--- a/client/src/components/ErrorPage/ErrorPage.scss
+++ b/client/src/components/ErrorPage/ErrorPage.scss
@@ -1,5 +1,9 @@
 .error-page {
-	width: 60%;
+	width: 50%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	margin: auto;
 	display: flex;
 	flex-direction: column;
