--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,23 @@
 :root {
-    --mainColor: #0a4660;
-    --secondColor: #937047;
+    /* --mainColor: #0a4660;
+    --secondColor: #F3F5F9;
     --redColor: rgb(210, 63, 87);
     --bkRed: rgb(252, 233, 236);
     --boxShadow: 0px 1px 5px rgb(3 0 71 / 9%);
     --boxShadowStrong: 0px 5px 5px rgb(3 0 71/ 15%);
     --textColor: #e7dac7;
+    --textSecondColor: #373F50;
+    --bodyColor: #F6F9F9;
+    --bodyWhite: #fff;
+    --border: 1px solid #ddd;
+    --padding: 10px; */
+    --mainColor: #41b1d3;
+    --secondColor: #F3F5F9;
+    --redColor: #d23f57;
+    --bkBlue: #b8d8e088;
+    --boxShadow: 0px 1px 5px rgb(3 0 71 / 9%);
+    --boxShadowStrong: 0px 5px 5px rgb(3 0 71/ 15%);
+    --textColor: #f3f3f3;
     --textSecondColor: #373F50;
     --bodyColor: #F6F9F9;
     --bodyWhite: #fff;
@@ -92,6 +104,8 @@ button:active, svg:active, a:active {
     transform: translate(-50%, -50%);
     max-width: 90%;
     max-height: 90%;
+    margin-top: 20px;
+    transition: all .4s;
     background-color: var(--bodyColor);
     padding: 20px;
     border-radius: 10px;
@@ -129,45 +143,44 @@ button:active, svg:active, a:active {
 
 /* Scrollbar */
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 16px;
     height: 16px;
 }
 
-
-
-body::-webkit-scrollbar-track {
-    background-color: var(--bodyColor);
+::-webkit-scrollbar-track {
+    background-color: var(--secondColor);
 }
 
-body::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
+    width: 5px;
     background-color: var(--mainColor);
 }
 
-body::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
     transition: all .3s;
     background: #0a4660d8;
 }
 
-body::-webkit-scrollbar-button:single-button {
+::-webkit-scrollbar-button:single-button {
     background-color: var(--mainColor);
     display: block;
     background-size: 10px;
     background-repeat: no-repeat;
 }
 
-body::-webkit-scrollbar-button:single-button:vertical:decrement,
-body::-webkit-scrollbar-button:single-button:vertical:increment {
+::-webkit-scrollbar-button:single-button:vertical:decrement,
+::-webkit-scrollbar-button:single-button:vertical:increment {
     height: 12px;
     width: 16px;
     background-position: center 4px;
 
 }
 
-body::-webkit-scrollbar-button:single-button:vertical:decrement {
+::-webkit-scrollbar-button:single-button:vertical:decrement {
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(96, 96, 96)'><polygon points='50,00 0,50 100,50'/></svg>");
 }
 
-body::-webkit-scrollbar-button:single-button:vertical:increment {
+::-webkit-scrollbar-button:single-button:vertical:increment {
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(96, 96, 96)'><polygon points='0,0 100,0 50,50'/></svg>");
 }
