--- a/client/src/pages/SignUp/SginUp.scss
+++ b/client/src/pages/SignUp/SginUp.scss
@@ -1,8 +1,8 @@
 form.sign-content {
+	grid-area: main;
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
-	// flex-direction: column;
 	margin: 10px 0;
 
 	.sign-box {
@@ -208,12 +208,5 @@ form.sign-content {
 				}
 			}
 		}
-
-		// .social {
-		// 	ul {
-		// 		display: flex;
-		// 		gap: 20px;
-		// 	}
-		// }
 	}
 }
